# acid

./: .gitignore  README.md  pyproject.toml  test.py
acid/: __init__.py  cmyk.py  colour.py  hsl.py  hsv.py  lab.py  rgb.py  xyz.py
ketamine/: colour.py  hex.py  hsl.py  hsv.py  xyz.py
