[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ketamine"
version = "1.0.0"
authors = [
  { name="sertdfyguhi" },
]
description = "A robust python library for colour conversion between colour models."
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Scientific/Engineering :: Image Processing",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
keywords = [
  "color",
  "colour",
  "conversion",
  "color conversion",
  "colour conversion",
  "graphics",
  "rgb"
]

[project.urls]
"Homepage" = "https://github.com/sertdfyguhi/ketamine"
"Bug Tracker" = "https://github.com/sertdfyguhi/ketamine/issues"

[tool.hatch.build.targets.wheel]
packages = ["ketamine"]